// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/ <LabelText> component render snapshot tests should render type email to suppress inputMode and allow multiple values 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={true}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="email"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render type tel or url to suppress inputMode and multiple 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="tel"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with aria label + labelby and empty label 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  
  <input
    aria-invalid={false}
    aria-labelledby="ID-ARIA-LABELLEDBY"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    inputMode="decimal"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with aria label and empty label 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  
  <input
    aria-invalid={false}
    aria-label="ARIA LABEL"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;

exports[`src/components/ <LabelText> component render snapshot tests should render with minimal properties 1`] = `
<label
  className="LabelText"
  htmlFor="txtID"
  id="ID"
>
  LABEL
  <input
    aria-invalid={false}
    aria-labelledby="ID"
    aria-multiline={false}
    aria-required={false}
    disabled={false}
    id="txtID"
    multiple={false}
    name="txtID"
    readOnly={false}
    required={false}
    role="textbox"
    spellCheck={false}
    type="text"
    value="VALUE"
  />
</label>
`;
